--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,181 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+body {
+  background-color: white;
+  background-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      to bottom,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    linear-gradient(to bottom, #e7e7e7 0%, #e7e7e7 1%, #1a1a1a 100%);
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.page,
+.header__cover,
+.retrospective__cards,
+.footer__cover {
+  margin-inline: auto;
+}
 
 .page {
+  color: var(--font-color, #000000);
+  font-family: var(--inter, "Inter"), "sans-serif";
+  font-size: 18px;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-variation-settings: "wght" var(--fw-text, 400);
+}
+
+.header__cover,
+.card__heading,
+.card__image,
+.card__text-block,
+.card__like-button,
+.footer__cover,
+.card__floppy-container {
+  border: 2px solid #000000;
+  background: #ffffff;
+}
+
+.header__cover {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* по горизонтали */
+  gap: 20px;
+  margin-block: 6.25rem;
+  padding-block: clamp(120px, calc(0.7512vw + 117.183px), 128px);
+  font-family: var(--press-start-2p, "PressStart2P"), "monospace";
+  text-transform: uppercase;
+  inline-size: var(--section-width, clamp(375px, 48.6vw, 700px));
+}
+
+.header__title {
+  font-size: clamp(49px, 4.5vw, 65px);
+}
+
+.header__subtitle {
+  font-size: 23px;
+}
+
+.explanation {
+  font-family: var(--press-start-2p, "PressStart2P"), "monospace";
+  font-size: 14px;
+}
+
+.retrospective__cards {
+  display: grid;
+  gap: 49.9px;
+  word-break: break-word;
+  inline-size: var(--section-width, clamp(375px, 48.6vw, 700px));
+}
+
+.card__heading {
+  padding: 4px 10px 4.5px;
+  font-size: 18px;
+  font-variation-settings: "wght" var(--fw-header-bold, 700);
+}
+
+.card__image {
+  display: grid;
+  justify-self: center;
+  inline-size: 100%;
+  min-block-size: clamp(375px, 700.75px, 700.75px);
+}
+
+.card__text-block {
+  display: grid;
+  gap: 25px;
+  padding: 20px 25.5px 18.55px;
+}
+
+.card__text {
+  line-height: 21.12px;
+}
+
+.card__like-container {
+  display: flex;
+  justify-content: flex-end; /* прижать элементы к правому краю */
+  align-items: center; /* выровнять по вертикали по центру */
+}
+
+.card__icon-button {
+  border: none;
+  background-color: transparent;
+}
+
+.like-icon {
+  width: 39px;
+  height: 39px;
+}
+
+.card__like-button {
+  inline-size: 130px;
+  block-size: 38px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center; /* Центрирует по горизонтали */
+  margin-block-start: 3.125rem;
+  margin-block-end: clamp(6rem, 6.25rem, 6.4375rem);
+}
+
+.card__floppy-container {
+  display: flex;
+  align-items: center; /* центр по горизонтали */
+  inline-size: 335px;
+  block-size: 55px; /* расстояние между иконкой и текстом */
+}
+
+.footer__cover {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 0;
+  inline-size: clamp(19rem, 19.125rem, 20.9375rem);
+  max-block-size: 5.25rem;
+}
+
+.floppy {
+  width: 28px;
+  height: 28px;
+}
+
+@media (max-width: 376px) {
+  .header {
+    inline-size: 100%;
+  }
+
+  .header__subtitle {
+    font-size: 14px;
+  }
+
+  .content {
+    inline-size: 100%;
+  }
+ 
+  .card__image {
+  min-block-size: 375px;
+ }
+
+  .card__floppy-container {
+    inline-size: 306px;
+    block-size: 84px;
+  }
+
+  .footer__cover {
+    flex-direction: column; /* по вертикали */
+  }
 }
