--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,86 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+@keyframes scaleUp {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.25);
+  }
+}
+
+@keyframes sparks {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.heart {
+  fill: transparent;
+  transition: fill 0.3s ease;
+}
+
+.like-icon:hover .core {
+  fill: var(--contour-color, black);
+}
+
+.like-icon:hover .main-body {
+  fill: var(--contour-color, black);
+  transition: fill 0.3s ease 0.05s;
+}
+
+.like-icon:not(:hover) .core {
+  transition: fill 0.3s ease 0.03s;
+}
+
+.like-icon:active .core {
+  fill: var(--animation-fill-color, #ff0000);
+}
+
+.like-icon:active .main-body {
+  fill: var(--animation-fill-color, #ff0000);
+  transition: fill 0.3s ease 0.05s;
+}
+
+.like-icon:not(:active) .core {
+  transition: fill 0.3s ease 0.03s;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--animation-fill-color, #ff0000);
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--animation-fill-color, #ff0000);
+  transition: fill 0.3s ease 0.03s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--animation-fill-color, #ff0000);
+  transition: fill 0.3s ease 0.06s;
+}
+
+.heart {
+  transform-origin: center;
+}
+
+.like-icon.is-liked .heart {
+  animation: scaleUp 0.3s ease-in 0.1s;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon.is-liked .sparks {
+  animation: sparks 0.3s ease-in 0.3s;
+}
+
+.like-icon:not(.is-liked) .contour {
+  transition: fill 0.1s linear;
+  fill: var(--contour-color, #000000);
+}
