--- a/styles/style.css
+++ b/styles/style.css
@@ -10,30 +10,15 @@
 
 */
 body {
-  background-color: white;
-  background-image: repeating-linear-gradient(
-      to right,
-      #d3d3d3,
-      #d3d3d3 2px,
-      transparent 2px,
-      transparent 4px
-    ),
-    repeating-linear-gradient(
-      to bottom,
-      #d3d3d3,
-      #d3d3d3 2px,
-      transparent 2px,
-      transparent 4px
-    ),
-    linear-gradient(to bottom, #e7e7e7 0%, #e7e7e7 1%, #1a1a1a 100%);
+  background-color: var(--bg-color, #ffffff);
+  background-image: var(--bg-imag);
   background-size: cover;
   background-attachment: fixed;
 }
 
 .page,
 .header__cover,
-.retrospective__cards,
-.footer__cover {
+.retrospective__cards {
   margin-inline: auto;
 }
 
@@ -50,17 +35,15 @@ body {
 .card__heading,
 .card__image,
 .card__text-block,
-.card__like-button,
-.footer__cover,
-.card__floppy-container {
+.button {
   border: 2px solid #000000;
-  background: #ffffff;
+  background: var(--bg-color, #ffffff);
 }
 
 .header__cover {
   display: flex;
   flex-direction: column;
-  align-items: center; /* по горизонтали */
+  align-items: center;
   gap: 20px;
   margin-block: 6.25rem;
   padding-block: clamp(120px, calc(0.7512vw + 117.183px), 128px);
@@ -74,12 +57,7 @@ body {
 }
 
 .header__subtitle {
-  font-size: 23px;
-}
-
-.explanation {
-  font-family: var(--press-start-2p, "PressStart2P"), "monospace";
-  font-size: 14px;
+  font-size: clamp(14px, 1.6vw, 23px);
 }
 
 .retrospective__cards {
@@ -90,55 +68,64 @@ body {
 }
 
 .card__heading {
-  padding: 4px 10px 4.5px;/*добавил*/
+  padding: 4px 10px 4.5px;
   font-size: 18px;
   font-variation-settings: "wght" var(--fw-header-bold, 700);
 }
 
 .card__image {
+  position: relative;
   display: grid;
   justify-self: center;
   inline-size: 100%;
-  aspect-ratio: 1/1; /*добавил*/
+  aspect-ratio: 1/1;
 }
 
-.card_intro__image {
-filter: grayscale(100%);
+.card__label {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  z-index: 1;
+  opacity: 50%;
+  color: #000000;
+  font-family: var(--press-start-2p, "PressStart2P"), "monospace";
+  font-size: 14px;
+  line-height: 100%;
+  mix-blend-mode: hard-light;
 }
 
-.card_sprint1-start__image {
-filter: sepia(100%);
+.card_intro__image-filter {
+  filter: saturate(150%) contrast(120%) brightness(110%);
 }
 
-.card_sprint1-end__image {
-filter: blur(2px);
+.card_sprint1-start__image-filter {
+  filter: invert(100%);
 }
 
-.card_sprint2-start__image {
-filter: brightness(150%);
+.card_sprint1-end__image-filter {
+  filter: blur(7px);
 }
 
-.card_sprint2-end__image {
-filter: contrast(200%);
+.card_sprint2-start__image-filter {
+  filter: sepia(20%);
 }
 
-.card_sprint3-start__image {
-filter: hue-rotate(90deg);
+.card_sprint2-end__image-filter {
+  filter: contrast(200%);
 }
 
-.card_sprint3-end__image {
-filter: saturate(200%);
+.card_sprint3-start__image-filter {
+  filter: hue-rotate(90deg);
 }
 
-.card_now__image {
-filter: sepia(100%);
+.card_sprint3-end__image-filter {
+  filter: grayscale(100%);
 }
-
 
 .card__text-block {
   display: grid;
-    gap: 24.5px;
-    padding: 25px 25.5px 20px;  /*добавил*/
+  gap: 24.5px;
+  padding: 25px 25.5px 20px;
 }
 
 .card__text {
@@ -147,8 +134,7 @@ filter: sepia(100%);
 
 .card__like-container {
   display: flex;
-  justify-content: flex-end; /* прижать элементы к правому краю */
-  align-items: center; /* выровнять по вертикали по центру */
+  justify-content: flex-end;
 }
 
 .card__icon-button {
@@ -166,66 +152,167 @@ filter: sepia(100%);
   block-size: 38px;
 }
 
-.footer {
-  display: flex;
-  justify-content: center;
-  margin-block-start: 3.125rem;
-  margin-block-end: clamp(6rem, 6.25rem, 6.4375rem);
-  margin-inline: auto;
+.button {
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
 }
 
-.card__floppy-container {
+.button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  background-color: var(--accent-color);
+  transition: transform 0.5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.button:focus {
+  box-shadow: 2px 2px 0 var(--accent-color);
+  outline: none;
+  transition: box-shadow 0.3s ease;
+}
+
+.button:hover::before {
+  transform: scaleX(1);
+}
+
+.button__text {
+  color: white;
+  font-family: var(--press-start-2p, "PressStart2P"), "monospace";
+  font-size: 14px;
+  mix-blend-mode: difference;
+}
+
+.floppy_container {
+  display: flex;
+  justify-content: center;
+  margin-block-end: clamp(6rem, 6.25rem, 6.4375rem);
+}
+
+.button__dialog-open {
   display: flex;
   align-items: center;
+  gap: 8px;
+  padding-inline-start: 19px;
   inline-size: 335px;
   block-size: 55px;
 }
 
-.footer__cover {
+.floppy {
+  width: 21px;
+  height: 21px;
+  color: white;
+  mix-blend-mode: difference;
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding-inline: 30px;
+  font-family: inherit;
+  inline-size: 353px;
+  block-size: 191px;
+}
+
+.modal__content {
   display: flex;
   align-items: center;
-  gap: 8px;
-  padding: 0;
-  inline-size: clamp(19rem, 19.125rem, 20.9375rem);
-  max-block-size: 5.25rem;
+  gap: 12px;
 }
 
-.floppy {
-  width: 28px;
-  height: 28px;
+.modal__icon_floppy {
+  width: 100px;
+  height: 60px;
 }
 
-@media (max-width: 376px) {
+.modal__text {
+  line-height: 150%;
+  text-transform: uppercase;
+}
+
+.modal__button {
+  display: block;
+  inline-size: 293px;
+  block-size: 38px;
+}
+
+.modal::backdrop {
+  opacity: 75%;
+  background: #000000;
+}
+
+.modal:not([open]) {
+  display: none;
+}
+
+@media (width <= 376px) {
   .header {
     inline-size: 100%;
   }
 
-  .header__subtitle {
-    font-size: 14px;
-  }
-
-  .retrospective__cards {
-  display: grid;
-  gap: 48px;
-}
-
   .content {
     inline-size: 100%;
   }
- 
+
+  .retrospective__cards {
+    display: grid;
+    gap: 48px;
+  }
+
+  .card__label {
+    right: 13px;
+  }
+
   .card__floppy-container {
     inline-size: 306px;
     block-size: 84px;
   }
 
-  .footer__cover {
-    flex-direction: column; /* по вертикали */
+  .button__dialog-open {
+    flex-direction: column;
+    padding: 15px 0px;
+    inline-size: 306px;
+    block-size: 84px;
+  }
+
+  .modal {
+    padding-inline: 40px;
+    max-inline-size: 341px;
+  }
+
+  .modal__button {
+    inline-size: 257px;
+  }
+
+  .floppy {
+    width: 28px;
+    height: 28px;
   }
 }
 
-/*@supports (-webkit-text-stroke: 1px black) or (text-stroke: 1px black) {
-  .stroke-text {
-    -webkit-text-stroke: 1px black;
-    text-stroke: 1px black;
+/* Обводка текста с @supports */
+@supports (-webkit-text-stroke: 1px var(--label-stroke-color)) {
+  .card__label {
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--label-stroke-color);
   }
-}*/
+}
+
+@supports not (-webkit-text-stroke: 1px var(--label-stroke-color)) {
+  .card__label {
+    text-shadow: 0 0 1px var(--label-stroke-color);
+  }
+}
