--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,10 +1,30 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
-  --inter: 'Inter', 'sans-serif';
-  --press-start-2p: 'PressStart2P', 'monospace';
+  --inter: "Inter", "sans-serif";
+  --press-start-2p: "PressStart2P", "monospace";
   --fw-header-bold: 700;
   --fw-header-light: 400;
   --fw-text: 400;
+  --section-width: clamp(375px, 48.6vw, 700px);
+  --bg-imag: repeating-linear-gradient(
+      to right,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      to bottom,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    linear-gradient(to bottom, #e7e7e7 0%, #e7e7e7 1%, #1a1a1a 100%);
+  --accent-color: #000000;
+  --contour-color: #000000;
+  --animation-fill-color: #ff0000;
   --font-color: #000000;
-  --section-width: clamp(375px, 48.6vw, 700px); /* от 320px до 1024px */
+  --label-stroke-color: #ffffff;
+  --bg-color: #ffffff;
 }
