--- a/styles/animations.css
+++ b/styles/animations.css
@@ -29,48 +29,55 @@
 
 .heart {
   fill: transparent;
-  transition: fill 0.3s ease;
+  transition: fill 0.3s linear;
   transform-origin: center;
+}
+
+.main-body {
+  transition: fill 0.3s linear;
 }
 
 .like-icon:hover .core {
   fill: var(--contour-color, black);
+  transition: fill 0.3s linear 0s;
 }
 
 .like-icon:hover .main-body {
   fill: var(--contour-color, black);
-  transition: fill 0.3s ease 0.05s;
+  transition: fill 0.3s linear 0.05s;
 }
 
 .like-icon:not(:hover) .core {
-  transition: fill 0.3s ease 0.03s;
+  transition: fill 0.3s linear 0.03s;
 }
 
 .like-icon:active .core {
   fill: var(--animation-fill-color, #ff0000);
+  transition: fill 0.3s linear 0s;
 }
 
 .like-icon:active .main-body {
   fill: var(--animation-fill-color, #ff0000);
-  transition: fill 0.3s ease 0.05s;
+  transition: fill 0.3s linear 0.05s;
 }
 
 .like-icon:not(:active) .core {
-  transition: fill 0.3s ease 0.03s;
+  transition: fill 0.3s linear 0.03s;
 }
 
 .like-icon.is-liked .core {
   fill: var(--animation-fill-color, #ff0000);
+  transition: fill 0.3s linear 0s;
 }
 
 .like-icon.is-liked .main-body {
   fill: var(--animation-fill-color, #ff0000);
-  transition: fill 0.3s ease 0.03s;
+  transition: fill 0.3s linear 0.05s;
 }
 
 .like-icon.is-liked .contour {
   fill: var(--animation-fill-color, #ff0000);
-  transition: fill 0.3s ease 0.06s;
+  transition: fill 0.3s linear 0.06s;
 }
 
 .like-icon.is-liked .heart {
