--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ body {
 
 .page {
   color: var(--font-color, #000000);
-  font-family: var(--inter, "Inter"), "sans-serif";
+  font-family: var(--main-font, "Inter"), "sans-serif";
   font-size: 18px;
   min-inline-size: 320px;
   min-block-size: 100dvb;
@@ -47,7 +47,7 @@ body {
   gap: 20px;
   margin-block: 6.25rem;
   padding-block: clamp(120px, calc(0.7512vw + 117.183px), 128px);
-  font-family: var(--press-start-2p, "PressStart2P"), "monospace";
+  font-family: var(--accent-font, "PressStart2P"), "monospace";
   text-transform: uppercase;
   inline-size: var(--section-width, clamp(375px, 48.6vw, 700px));
 }
@@ -88,44 +88,44 @@ body {
   z-index: 1;
   opacity: 50%;
   color: #000000;
-  font-family: var(--press-start-2p, "PressStart2P"), "monospace";
+  font-family: var(--accent-font, "PressStart2P"), "monospace";
   font-size: 14px;
   line-height: 100%;
   mix-blend-mode: hard-light;
 }
 
-.card_intro__image-filter {
+.filter-multiple {
   filter: saturate(150%) contrast(120%) brightness(110%);
 }
 
-.card_sprint1-start__image-filter {
+.filter-invert {
   filter: invert(100%);
 }
 
-.card_sprint1-end__image-filter {
+.filter-blur {
   filter: blur(7px);
 }
 
-.card_sprint2-start__image-filter {
+.filter-sepia {
   filter: sepia(20%);
 }
 
-.card_sprint2-end__image-filter {
+.filter-contrast {
   filter: contrast(200%);
 }
 
-.card_sprint3-start__image-filter {
+.filter-hue-rotate {
   filter: hue-rotate(90deg);
 }
 
-.card_sprint3-end__image-filter {
+.filter-grayscale {
   filter: grayscale(100%);
 }
 
 .card__text-block {
   display: grid;
   gap: 24.5px;
-  padding: 25px 25.5px 20px;
+  padding: 25px 25.5px 27px;
 }
 
 .card__text {
@@ -135,6 +135,7 @@ body {
 .card__like-container {
   display: flex;
   justify-content: flex-end;
+  gap: 6px;
 }
 
 .card__icon-button {
@@ -144,7 +145,6 @@ body {
 
 .like-icon {
   width: 39px;
-  height: 39px;
 }
 
 .card__like-button {
@@ -172,8 +172,18 @@ body {
   block-size: 100%;
 }
 
-.card__icon-button:focus {
+.card__icon-button {
+  inline-size: 39px;
+  block-size: 38px;
+  display: grid;
+  justify-content: center;
+  border: 2px solid transparent;
+}
+
+.card__icon-button:focus-visible {
   outline: none;
+  border-color: var(--accent-color);
+  transition: border-color 0.3s ease;
 }
 
 .button:focus {
@@ -188,7 +198,7 @@ body {
 
 .button__text {
   color: white;
-  font-family: var(--press-start-2p, "PressStart2P"), "monospace";
+  font-family: var(--accent-font, "PressStart2P"), "monospace";
   font-size: 14px;
   mix-blend-mode: difference;
 }
@@ -219,12 +229,10 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   gap: 30px;
-  padding-inline: 30px;
+  padding: 27.6px 30px;
   font-family: inherit;
   inline-size: 353px;
-  block-size: 191px;
 }
 
 .modal__content {
@@ -245,7 +253,7 @@ body {
 
 .modal__button {
   display: block;
-  inline-size: 293px;
+  inline-size: 291px;
   block-size: 38px;
 }
 
