--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,7 +1,7 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
-  --inter: "Inter", "sans-serif";
-  --press-start-2p: "PressStart2P", "monospace";
+  --main-font: "Inter", "sans-serif";
+  --accent-font: "PressStart2P", "monospace";
   --fw-header-bold: 700;
   --fw-header-light: 400;
   --fw-text: 400;
