--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ body {
 
 .page {
   color: var(--font-color, #000000);
-  font-family: var(--main-font, "Inter"), "sans-serif";
+  font-family: var(--main-font, "Inter"), sans-serif;
   font-size: 18px;
   min-inline-size: 320px;
   min-block-size: 100dvb;
@@ -47,7 +47,7 @@ body {
   gap: 20px;
   margin-block: 6.25rem;
   padding-block: clamp(120px, calc(0.7512vw + 117.183px), 128px);
-  font-family: var(--accent-font, "PressStart2P"), "monospace";
+  font-family: var(--accent-font, "PressStart2P"), monospace;
   text-transform: uppercase;
   inline-size: var(--section-width, clamp(375px, 48.6vw, 700px));
 }
@@ -88,7 +88,7 @@ body {
   z-index: 1;
   opacity: 50%;
   color: #000000;
-  font-family: var(--accent-font, "PressStart2P"), "monospace";
+  font-family: var(--accent-font, "PressStart2P"), monospace;
   font-size: 14px;
   line-height: 100%;
   mix-blend-mode: hard-light;
@@ -145,12 +145,12 @@ body {
   display: grid;
   justify-content: center;
   border: 2px solid transparent;
+  transition: border-color 0.3s ease;
 }
 
 .card__icon-button:focus-visible {
   outline: none;
   border-color: var(--accent-color);
-  transition: border-color 0.3s ease;
 }
 
 .like-icon {
@@ -166,6 +166,7 @@ body {
   position: relative;
   z-index: 1;
   overflow: hidden;
+  transition: box-shadow 0.3s ease;
 }
 
 .button::before {
@@ -185,7 +186,6 @@ body {
 .button:focus {
   box-shadow: 2px 2px 0 var(--accent-color);
   outline: none;
-  transition: box-shadow 0.3s ease;
 }
 
 .button:hover::before {
@@ -194,7 +194,7 @@ body {
 
 .button__text {
   color: white;
-  font-family: var(--accent-font, "PressStart2P"), "monospace";
+  font-family: var(--accent-font, "PressStart2P"), monospace;
   font-size: 14px;
   mix-blend-mode: difference;
 }
@@ -228,7 +228,8 @@ body {
   gap: 30px;
   padding: 27.6px 30px;
   font-family: inherit;
-  inline-size: 353px;
+  min-inline-size: 357px;
+  max-inline-size: 357px;
 }
 
 .modal__content {
@@ -249,7 +250,7 @@ body {
 
 .modal__button {
   display: block;
-  inline-size: 291px;
+  inline-size: 293px;
   block-size: 38px;
 }
 
@@ -294,6 +295,7 @@ body {
 
   .modal {
     padding-inline: 40px;
+    min-inline-size: 341px;
     max-inline-size: 341px;
   }
 
